--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,7 @@ stage_failure:
     paths:
       - bin/results
 
-successful_success:
+stage_success:
   script: DEBUG=true bin/mycommand
   artifacts:
     paths:
