--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,5 +20,5 @@ run:
   script:
     - python setup.py sdist bdist_wheel
     - import os && os.listdir()
-    - python3 -m twine upload --repository local dist/*
+    - python3 -m twine upload --repository https://awakzdev.jfrog.io/artifactory/api/pypi/pypi dist/*
 
