--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,5 +19,5 @@ before_script:
 run:
   script:
     - python setup.py sdist bdist_wheel
-    - python3 -m twine upload --repository https://awakzdev.jfrog.io/artifactory/api/pypi/pypi dist/*
+    - python3 -m twine upload -r local dist/* --config-file $PYPIRC
 
